add character class

--- a/MyApplication/app/src/main/res/values-ru/strings.xml
+++ b/MyApplication/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,51 @@
     <string name="Categories_weap">Оружие</string>
     <string name="Cat_charac">Персонажи</string>
     <string name="Cat_artifacts">Артефакты</string>
-    <string name="Nodendrochars">В игре нет персонажей Дендро стихии</string></resources>
+    <string name="Nodendrochars">В игре нет персонажей Дендро стихии</string>
+    <string name="Eula_name">Эола</string>
+    <string name="Albedo_name">Альбедо</string>
+    <string name="Aloy_name">Элой</string>
+    <string name="Amber_name">Эмбер</string>
+    <string name="Itto_name">Итто</string>
+    <string name="Barbara_name">Барбара</string>
+    <string name="Beidou_name">Бэй Доу</string>
+    <string name="Bennet">Беннет</string>
+    <string name="Chongyun">Чунь Юнь</string>
+    <string name="Diluc">Дилюк</string>
+    <string name="Diona">Диона</string>
+    <string name="Fischl">Фишль</string>
+    <string name="Ganyu">Гань Юй</string>
+    <string name="Gorou">Горо</string>
+    <string name="Hu_Tao">Ху Тао</string>
+    <string name="Jean">Джин</string>
+    <string name="Kazuha">Казуха</string>
+    <string name="Kaeya">Кєйа</string>
+    <string name="Ayaka">Аяка</string>
+    <string name="Keqing">Кє Цин</string>
+    <string name="Klee">Кли</string>
+    <string name="Kujou_Sara">Кудзе Сара</string>
+    <string name="Lisa">Лиза</string>
+    <string name="Mona">Мона</string>
+    <string name="Ningguang">Нин Гуан</string>
+    <string name="Noelle">Ноэль</string>
+    <string name="Qiqi">Ци ци</string>
+    <string name="Raiden">Райдєн</string>
+    <string name="Razor">Рэйзор</string>
+    <string name="Rosaria">Розария</string>
+    <string name="Kokomi">Кокоми</string>
+    <string name="Sayu">Саю</string>
+    <string name="Shenhe">Шэнь Хэ</string>
+    <string name="Sucrose">Сахароза</string>
+    <string name="Tartaglia">Тарталия</string>
+    <string name="Thoma">Тоума</string>
+    <string name="Traveler">Путешественник</string>
+    <string name="Venti">Венти</string>
+    <string name="Xiangling">Сян Лин</string>
+    <string name="Xiao">Сяо</string>
+    <string name="Xingqiu">Синь Цю</string>
+    <string name="Xinyan">Синь Янь</string>
+    <string name="Yanfei">Ян Фэй</string>
+    <string name="Yoimiya">Ёимия</string>
+    <string name="Yun_Jin">Юнь Дзи</string>
+    <string name="Zhongli">Чжун Ли</string>
+</resources>
