--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -4,4 +4,50 @@
     <string name="Cat_charac">Characters</string>
     <string name="Cat_artifacts">Artifacts</string>
     <string name="Nodendrochars">There is no Dendro characters in game</string>
+    <string name="Eula_name">Eula</string>
+    <string name="Albedo_name">Albedo</string>
+    <string name="Aloy_name">Aloy</string>
+    <string name="Amber_name">Amber</string>
+    <string name="Itto_name">Arataki Itto</string>
+    <string name="Barbara_name">Barbara</string>
+    <string name="Beidou_name">Beidou</string>
+    <string name="Bennet">Bennet</string>
+    <string name="Chongyun">Chongyun</string>
+    <string name="Diluc">Diluc</string>
+    <string name="Diona">Diona</string>
+    <string name="Fischl">Fischl</string>
+    <string name="Ganyu">Ganyu</string>
+    <string name="Gorou">Gorou</string>
+    <string name="Hu_Tao">Hu Tao</string>
+    <string name="Jean">Jean</string>
+    <string name="Kazuha">Kaehadehara Kazuha</string>
+    <string name="Kaeya">Kaeya</string>
+    <string name="Ayaka">Kamisato Ayaka</string>
+    <string name="Keqing">Keqing</string>
+    <string name="Klee">Klee</string>
+    <string name="Kujou_Sara">Kujou Sara</string>
+    <string name="Lisa">Lisa</string>
+    <string name="Mona">Mona</string>
+    <string name="Ningguang">Ningguang</string>
+    <string name="Noelle">Noelle</string>
+    <string name="Qiqi">Qiqi</string>
+    <string name="Raiden">Raiden Shogun</string>
+    <string name="Razor">Razor</string>
+    <string name="Rosaria">Rosaria</string>
+    <string name="Kokomi">Sangonomiya Kokomi</string>
+    <string name="Sayu">Sayu</string>
+    <string name="Shenhe">Shenhe</string>
+    <string name="Sucrose">Sucrose</string>
+    <string name="Tartaglia">Tartaglia</string>
+    <string name="Thoma">Thoma</string>
+    <string name="Traveler">Traveler</string>
+    <string name="Venti">Venti</string>
+    <string name="Xiangling">Xiangling</string>
+    <string name="Xiao">Xiao</string>
+    <string name="Xingqiu">Xingqiu</string>
+    <string name="Xinyan">Xinyan</string>
+    <string name="Yanfei">Yanfei</string>
+    <string name="Yoimiya">Yoimiya</string>
+    <string name="Yun_Jin">Yun Jin</string>
+    <string name="Zhongli">Zhongli</string>
 </resources>
