--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -50,4 +50,11 @@
     <string name="Yoimiya">Yoimiya</string>
     <string name="Yun_Jin">Yun Jin</string>
     <string name="Zhongli">Zhongli</string>
+    <string name="sitesearcher">https://genshin-impact.fandom.com/en/wiki/</string>
+    <string name="elemskill">Elemental Skill</string>
+    <string name="elembrst">Elemental Burst</string>
+    <string name="passive1">1st Ascension Passive</string>
+    <string name="passive4">4th Ascension Passive</string>
+    <string name="utpassive">Utility Passive</string>
+    <string name="tallup">Talent Upgrade</string>
 </resources>
